# openmc_cad_adapter

./: LICENSE  README.md  cubit_tests.sh  pyproject.toml
.github/: environment.yml
.github/workflows/: ci.yml
src/openmc_cad_adapter/: __init__.py  cubit_util.py  geom_util.py  gqs.py  surfaces.py  to_cubit_journal.py
test/: __init__.py  conftest.py  cylinder.jou  geometry.xml  local_tests.py  materials.xml  pincell.jou  pincell_cell1.jou  pincell_cell3.jou  plots.xml  settings.xml  tallies.xml  test_examples.py  test_local.py  test_quadric.py  test_utilities.py  xcylinder.jou
test/gold/: assembly.jou  cylinder.jou  ellipsoid.jou  lattice-hexagonal  lattice-hexagonal.jou  nested_spheres.jou  pincell.jou  pincell_cell1.jou  pincell_cell2.jou  pincell_cell3.jou  pincell_cell4.jou  plane.jou  x_cone.jou  x_torus.jou  xcylinder.jou  y_cone.jou  y_torus.jou  ycylinder.jou  z_cone.jou  z_torus.jou
